feat(build): Update signing configuration and ProGuard rules for release builds

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,13 @@
 workflows:
-    sample-workflow:
-        name: Codemagic Sample Workflow
+    ios-workflow:
+        name: Codemagic IOS Workflow
         max_build_duration: 120
         instance_type: mac_mini_m2
+        
+    android-workflow:
+        name: Codemagic ANDROID Workflow
+        max_build_duration: 120
+        instance_type: mac_mini_m2
+        environment:
+          android_signing:
+             - shentaokey
