--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,44 +1,63 @@
 workflows:
-    ios-workflow:
-        name: Codemagic IOS Workflow
-        max_build_duration: 120
-        instance_type: mac_mini_m2
-        
-    android-workflow:
-        name: Codemagic ANDROID Workflow
-        max_build_duration: 120
-        instance_type: mac_mini_m2
-        environment:
-          android_signing:
-             - shentaokey
-          groups:
-            - google_play
-          vars:
-            PACKAGE_NAME: "io.codemagic.fluttersample"
-            GOOGLE_PLAY_TRACK: alpha
-        scripts:
-        - name: Install npm dependencies
-          script: | 
-            npm install
-        - name: Set Android SDK location
-          script: | 
-            echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
-        - name: Build Android release
-          script: | 
-                LATEST_GOOGLE_PLAY_BUILD_NUMBER=$(google-play get-latest-build-number --package-name "$PACKAGE_NAME")
-                if [ -z LATEST_BUILD_NUMBER ]; then
-                  # fallback in case no build number was found from Google Play.
-                  # Alternatively, you can `exit 1` to fail the build
-                  # BUILD_NUMBER is a Codemagic built-in variable tracking the number
-                  # of times this workflow has been built
-                    UPDATED_BUILD_NUMBER=$BUILD_NUMBER
-                else
-                    UPDATED_BUILD_NUMBER=$(($LATEST_GOOGLE_PLAY_BUILD_NUMBER + 1))
-                fi
-                cd android
-                ./gradlew bundleRelease \
-                    -PversionCode=$UPDATED_BUILD_NUMBER \
-                    -PversionName=1.0.$UPDATED_BUILD_NUMBER
+  ios-workflow:
+    name: Codemagic IOS Workflow
+    max_build_duration: 120
+    instance_type: mac_mini_m2
+    environment:
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: shengram.shentao.it
+    vars:
+      BUNDLE_ID: "shengram.shentao.it"
+      XCODE_WORKSPACE: "ShentGram.xcworkspace"
+      XCODE_SCHEME: "ShentGram"
+    scripts:
+      - name: Build ipa for distribution
+        script: |
+          xcode-project build-ipa \
+            --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
+            --scheme "$XCODE_SCHEME"
+    artifacts:
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
 
-        artifacts:
-        - android/app/build/outputs/**/*.aab
+  android-workflow:
+    name: Codemagic ANDROID Workflow
+    max_build_duration: 120
+    instance_type: mac_mini_m2
+    environment:
+      android_signing:
+        - shentaokey
+      groups:
+        - google_play
+      vars:
+        PACKAGE_NAME: "io.codemagic.fluttersample"
+        GOOGLE_PLAY_TRACK: alpha
+    scripts:
+      - name: Install npm dependencies
+        script: |
+          npm install --legacy-peer-deps
+      - name: Set Android SDK location
+        script: |
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
+      - name: Build Android release
+        script: |
+          LATEST_GOOGLE_PLAY_BUILD_NUMBER=$(google-play get-latest-build-number --package-name "$PACKAGE_NAME")
+          if [ -z LATEST_BUILD_NUMBER ]; then
+            # fallback in case no build number was found from Google Play.
+            # Alternatively, you can `exit 1` to fail the build
+            # BUILD_NUMBER is a Codemagic built-in variable tracking the number
+            # of times this workflow has been built
+              UPDATED_BUILD_NUMBER=$BUILD_NUMBER
+          else
+              UPDATED_BUILD_NUMBER=$(($LATEST_GOOGLE_PLAY_BUILD_NUMBER + 1))
+          fi
+          cd android
+          ./gradlew bundleRelease \
+              -PversionCode=$UPDATED_BUILD_NUMBER \
+              -PversionName=1.0.$UPDATED_BUILD_NUMBER
+
+    artifacts:
+      - android/app/build/outputs/**/*.aab
