--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,8 @@
-platform :ios, '9.0'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative '../node_modules/react-native/scripts/react_native_pods'
+# require_relative '../node_modules/react-native/scripts/react_native_pods_dependencies'
+
+platform :ios, '13.0'
+prepare_react_native_project!
 
 target 'InstagramClone' do
   # Pods for InstagramClone
