--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@appandflow/masonry-list": "^0.4.0",
     "@react-native-community/blur": "^3.3.1",
-    "@react-native-community/cameraroll": "^1.2.1",
+    "@react-native-community/cli-platform-ios": "^18.0.0",
     "@types/react-native-fetch-blob": "^0.10.5",
     "@types/react-native-modalbox": "^1.4.8",
     "deprecated-react-native-listview": "0.0.6",
@@ -21,6 +21,7 @@
     "react-native": "^0.79.2",
     "react-native-animatable": "1.3.2",
     "react-native-camera": "^3.7.2",
+    "react-native-cli": "^2.0.1",
     "react-native-elements": "^1.2.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.4.1",
@@ -48,6 +49,8 @@
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/runtime": "^7.5.0",
+    "@react-native-community/cli": "^18.0.0",
+    "@react-native-community/cli-platform-android": "^18.0.0",
     "@react-native-community/eslint-config": "^0.0.3",
     "@types/jest": "^24.0.18",
     "@types/react": "16.8.19",
@@ -57,6 +60,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^24.1.0",
     "metro-react-native-babel-preset": "^0.51.1",
+    "react-native-cameraroll": "^1.0.0-alpha2",
     "react-test-renderer": "16.8.1",
     "typescript": "^3.6.3"
   },
