Add initial setup for InstagramClone iOS app
- Created Xcode project files and workspace settings.
- Added AppDelegate and main entry point for the application.
- Implemented LaunchScreen interface and app icon assets.
- Configured Info.plist with necessary app permissions and settings.
- Added test target with initial test case for welcome screen rendering.
- Integrated React Native dependencies and set up build schemes for both iOS and tvOS.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,6 +2,7 @@ require_relative '../node_modules/react-native/scripts/react_native_pods'
 # require_relative '../node_modules/react-native/scripts/react_native_pods_dependencies'
 
 platform :ios, '13.0'
+project 'InstagramClone.xcodeproj' 
 prepare_react_native_project!
 
 target 'InstagramClone' do
