--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,75 +1,46 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
-# require_relative '../node_modules/react-native/scripts/react_native_pods_dependencies'
+require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '13.0'
-project 'InstagramClone.xcodeproj' 
-prepare_react_native_project!
+platform :ios, '11.0'
+install! 'cocoapods', :deterministic_uuids => false
 
 target 'InstagramClone' do
-  # Pods for InstagramClone
-  pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
-  pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
-  pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
-  pod 'RCTTypeSafety', :path => "../node_modules/react-native/Libraries/TypeSafety"
-  pod 'React', :path => '../node_modules/react-native/'
-  pod 'React-Core', :path => '../node_modules/react-native/'
-  pod 'React-CoreModules', :path => '../node_modules/react-native/React/CoreModules'
-  pod 'React-Core/DevSupport', :path => '../node_modules/react-native/'
-  pod 'React-RCTActionSheet', :path => '../node_modules/react-native/Libraries/ActionSheetIOS'
-  pod 'React-RCTAnimation', :path => '../node_modules/react-native/Libraries/NativeAnimation'
-  pod 'React-RCTBlob', :path => '../node_modules/react-native/Libraries/Blob'
-  pod 'React-RCTImage', :path => '../node_modules/react-native/Libraries/Image'
-  pod 'React-RCTLinking', :path => '../node_modules/react-native/Libraries/LinkingIOS'
-  pod 'React-RCTNetwork', :path => '../node_modules/react-native/Libraries/Network'
-  pod 'React-RCTSettings', :path => '../node_modules/react-native/Libraries/Settings'
-  pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text'
-  pod 'React-RCTVibration', :path => '../node_modules/react-native/Libraries/Vibration'
-  pod 'React-Core/RCTWebSocket', :path => '../node_modules/react-native/'
+  config = use_native_modules!
 
-  pod 'React-cxxreact', :path => '../node_modules/react-native/ReactCommon/cxxreact'
-  pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi'
-  pod 'React-jsiexecutor', :path => '../node_modules/react-native/ReactCommon/jsiexecutor'
-  pod 'React-jsinspector', :path => '../node_modules/react-native/ReactCommon/jsinspector'
-  pod 'ReactCommon/jscallinvoker', :path => "../node_modules/react-native/ReactCommon"
-  pod 'ReactCommon/turbomodule/core', :path => "../node_modules/react-native/ReactCommon"
-  pod 'Yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
+  # Flags change depending on the env values.
+  flags = get_default_flags()
 
-  pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
-  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
-  pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => flags[:hermes_enabled],
+    :fabric_enabled => flags[:fabric_enabled],
+    # Enables Flipper.
+    #
+    # Note that if you have use_frameworks! enabled, Flipper will not work and
+    # you should disable the next line.
+    :flipper_configuration => FlipperConfiguration.disabled
+  )
 
-
-
+  # Manual pod specifications for your libraries
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
-
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
-
   pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
-
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
-  
-
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
-
-  pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
-  
-
-  pod 'react-native-blur', :path => '../node_modules/@react-native-community/blur'
+  pod 'RNCameraRoll', :path => '../node_modules/@react-native-community/cameraroll'
+  pod 'RNBlur', :path => '../node_modules/@react-native-community/blur'
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'InstagramCloneTests' do
-    inherit! :search_paths
+    inherit! :complete
     # Pods for testing
   end
 
-  use_native_modules!
-end
-
-target 'InstagramClone-tvOS' do
-  # Pods for InstagramClone-tvOS
-
-  target 'InstagramClone-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
+  post_install do |installer|
+    react_native_post_install(installer)
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
-
 end
